--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,53 +1,61 @@
-<html>
+<div class="container-fluid" style="padding-top : 2%; padding-left : 5%; padding-right : 5%">
+    <h1 class="cartText" style="font-family : poppins"> Cart </h1>
+    <div class="d-none d-lg-block" style="border-bottom: 1px solid #DADADA;"></div>
+    <div class="row">
 
-<head>
-    <title>Parth Frontend Assignment</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-    <div class="container" style="padding : 1%;">
-        <h1> Cart </h1>
-        <div class="row" style="border-bottom: 1px solid #DADADA;"></div>
-        <div class="col-lg-9" style = "border-right-style: solid; border-width: 1px; border-color: #DADADA;">
-            <div style = "display : flex; padding-top : 3%;">
-                <img class="parthDesign" src="/assets/images/cartImage.png" alt="Cart" style = "height : 21%; width : 18%" />
-                <div stye = "display : block;">
-                    <p class = "pdOriginals">PD Originals</p>
-                    <div style = "display : flex;">
-                    <h5 class = "cartItemName">Peruvian Modern Ergonomic Rocking Chair</h5>
-                    <h5 class = "priceItem"> ₹ 12, 560</h5>
+        <div class="leftCart col-12 col-lg-9" style="border : 1px solid red;">
+            <div style="display : flex; padding-top : 3%;">
+                <img class="parthDesign" src="/assets/images/cartImage.png" alt="Cart" />
+                <div style="display : block; width: 100%;">
+                    <p class="pdOriginals">PD Originals</p>
+                    <div style="display : flex;">
+                        <h5 class="cartItemName">Peruvian Modern Ergonomic Rocking Chair</h5>
+                        <h5 class="priceItem d-none d-lg-block">{{productCartDetails[2] | currency : 'INR'}}</h5>
                     </div>
                     <div style="display : flex">
-                        <span class="dot" style = "background-color: #222724;"></span>
-                        <p class = "colorDescription"> Midnight Black </p>
+                        <span class="dot" style="background-color: #222724;"></span>
+                        <p class="colorDescription"> Midnight Black </p>
+                        <p class = "d-block d-sm-none" style = "margin-top : 10%; margin-left : -63%;">{{productCartDetails[2] | currency : 'INR'}}</p>
                     </div> <br>
-                    <div style = "display : flex">
-                    <div class="quantity buttons_added" style="margin-left : 5%; margin-top : -5%;">
-                        <span><input type="button" value="-" class="minus">
-                            <input type="number" style="width : 40%" step="1" min="1" max="" name="quantity" value="1"
-                                title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input
-                                type="button" value="+" class="plus"></span>
-                    </div>
-                    <a href = "#" class =  "deleteProduct" style = "text-decoration: none;">Delete</a>
-                    <a href = "#" class =  "deleteProduct" style = "padding-left : 10%; text-decoration: none;">Save for later</a>
+                    <div style="display : flex">
+                        <div class="quantity buttons_added">
+                            <span><input type="button" value="-" (click)="changeQty('minus')" class="minus">
+                                <input type="number" style="width : 20%" step="1" min="1" max="" name="quantity"
+                                    value={{counter}} title="Qty" class="input-text qty text" size="4" pattern=""
+                                    inputmode=""><input type="button" value="+" (click)="changeQty('add')"
+                                    class="plus"></span>
+                        </div>
+                        <a href="#" class="deleteProduct" style="text-decoration: none;">Delete</a>
+                        <a href="#" class="saveForLetter" style="padding-left : 10%; text-decoration: none;">Save for
+                            later</a>
                     </div>
                 </div>
-                
+
             </div>
-            
+            <div style="border-bottom: 1px solid #DADADA;margin-top : 3%; width : 100%;"></div>
+
+            <div style="padding-top : 1%;">
+                <p class="shippingTitle">Shipping Address</p>
+                <p class="shippingAddr"><strong>Rajat Vallabh</strong>, 4th Floor, Parth Universal Pvt Ltd, Vatika
+                    Atrium, Sector 53, Gurugram<br>
+                    Phone Number: 0123456789 <strong>Edit Address</strong></p>
+            </div>
+
         </div>
-        <div class = "col-lg-3" style = "display : inline;">
-            <p class = "totalOrderItem">Order Total (2 items):</p>
-        </div><br>
-        <div class="row" style="border-bottom: 1px solid #DADADA;"></div>
+
+
+        <div class="checkoutClass col-12 col-lg-3">
+            <div class="totalPriceDisp">
+                <div class="totalOrderItem">Order Total (2 items):</div>
+                <div class="totalPrice"><strong>{{productCombinedPrice | currency : 'INR'}}</strong></div>
+            </div>
+            <button type="button" class="btn btn-primary rounded-0"
+                style="margin-left : 10%; background-color : #B1794E; border-color : #B1794E; padding : 1em 6.6em">Pre-Order</button>
+        </div>
+
+
     </div>
 
-    <div class="container" style="padding : 1%;">
-        <p class = "shippingTitle">Shipping Address</p>
-        <p class = "shippingAddr">Rajat Vallabh, 4th Floor, Parth Universal Pvt Ltd, Vatika Atrium, Sector 53, Gurugram<br>
-            Phone Number: 0123456789  <strong>Edit Address</strong></p>
-    </div>
 
-</body>
-</html>
+
+</div>
