changed: added comment

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -17,6 +17,7 @@
                         <p class="colorDescription"> Midnight Black </p>
                         <p class = "d-block d-sm-none" style = "margin-top : 10%; margin-left : -63%;">{{productCartDetails[2] | currency : 'INR'}}</p>
                     </div> <br>
+                    <!-- this is example -->
                     <div style="display : flex">
                         <div class="quantity buttons_added">
                             <span><input type="button" value="-" (click)="changeQty('minus')" class="minus">
